# image-service

./: .gitignore  Cargo.toml  README.md  app-config.toml
docker/Kafka/: commands.txt
src/: configurations.rs  main.rs  poolmanager.rs
src/broker/: mod.rs  producer.rs  subscriber.rs
src/error/: mod.rs
src/media/: mod.rs
src/repository/: mod.rs
src/response/: mod.rs
src/service/: mod.rs
