[package]
name = "image-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tracing-actix-web = "0.7"
tracing = "0.1"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
serde_repr = "0.1.14"
image = "0.24.6"
rand = "0.8.4"
actix-files = "0.6.2"
postgres = "0.19.5"
tokio-postgres = "0.7.8"
tokio = "1.29.1"
config = "0.13.3"
base64 = "0.21.2"
deadpool = "0.9.5"
deadpool-postgres = "0.10.5"
rdkafka = { version = "0.25", features = ["cmake-build"] }
